# sageDB

./: .gitignore  CMakeLists.simple.txt  CMakeLists.txt  README.md  README_Multimodal.md  SUBMODULE.md  __init__.py  build.sh  build.sh.backup  build_demo.sh  build_multimodal.sh  build_simple.sh  check_syntax.sh  sage_db.py
.github/: README.md
.github/workflows/: ci-tests.yml  quick-test.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_multimodal  test_sage_db
docs/: USAGE_MODES.md  anns_plugin_guide.md  multimodal_fusion_design.md
examples/: README.md  faiss_plugin_demo.py  multimodal_demo.cpp  multimodal_example.cpp  quickstart.py
include/sage_db/: modality_processors.h  vector_store.h
include/sage_db/anns/: base_anns.h  faiss_anns.h  faiss_plugin.h
install/include/sage_db/: common.h  vector_store.h
python/: CMakeLists.txt  bindings.cpp  multimodal_sage_db.py  sage_db.py
python/micro_service/: sage_db_service.py
src/: fusion_strategies.cpp  metadata_store.cpp  modality_manager.cpp  modality_processors.cpp  multimodal_sage_db.cpp  query_engine.cpp  sage_db.cpp  vector_store.cpp
src/anns/: anns_interface.cpp  base_anns.cpp  brute_force_plugin.cpp  faiss_plugin.cpp  flat_gpu_plugin.cpp  song_plugin.cpp  vamana_plugin.cpp
src/anns/flat_gpu/: cuda_helpers.cu  cuda_helpers_stub.cpp
tests/: test_libamm_integration.cpp  test_multimodal.cpp  test_python.py  test_sage_db.cpp
